[package]
name = "raku"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }

tokio = { version = "1.48.0", features = ["full"] } # Async runtime
eyre = "0.6.12" # Handle errors

dirs-next = "2.0.0" # Storing records

fundsp = "0.20.0" # Control 
rodio = "0.21.1" # Generate

# Archive.org
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
indicatif = "0.18.3"

# Files
tar = "0.4.44"
bzip2 = "0.6.1"

