[package]
name = "raku-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"

# Run time
tokio = { version = "1.48.0", features = ["full"] } 
eyre = "0.6.12" 

# Storage
dirs-next = "2.0.0" 

# Play audio
rodio = { version = "0.21.1", features = ["flac"] } # Generate

# Generate chord
fundsp = "0.20.0" 
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Record
midly = "0.5.3"
